# Physics-Visualization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  files.h
libs/glew/: INSTALL_RECEIPT.json  sbom.spdx.json
libs/glfw/: INSTALL_RECEIPT.json  sbom.spdx.json
shaders/: shader.frag  shader.vert
src/: createWindow.cpp  draw.cpp  elements.cpp  main.cpp  physics.cpp  window.cpp
